--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 		<h1>iván suárez</h1>
-		<li><a href="/about/">about</a></li>
-		<li><a href="/projects/">projects</a></li>
+		<li><a href="about.html">about</a></li>
+		<li><a href="projects.html">projects</a></li>
 	</body>
 </html>
