--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,14 @@
 		<h1>projects</h1>
 		<h1>etherboard<//h1>
 			<h1>projects</h1>
+			<a class=project-link href="default">
+			<div class"project-block">
 			<h1>etherboard<//h1>
+				<img src="etherboard.png"> 
+				<p>A smart contract oriented text board
+				using the Ethereum network</p>
+			</div>
+			</a>
 	</body>
 </html>
 
