--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>projects</h1>
-		<h1>etherboard<//h1>
 			<h1>projects</h1>
 			<a class=project-link href="default">
-			<div class"project-block">
-			<h1>etherboard<//h1>
+			<div class="project-block">
+			<h2>etherboard</h2>
+			<div class="project-image">
 				<img src="etherboard.png"> 
+			</div>
 				<p>A smart contract oriented text board
 				using the Ethereum network</p>
 			</div>
