Added about title

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
         <body>
+		<h1>about</h1>
                 <p>I'm a software developer based in Asturias, Spain. I focus in full-stack web development.</p>
                 <p>I'm interested in the upcoming decentralized web, blockchain technology and free software.</p>
         </body>
