--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" href="style.css"/>
+	</head>
+
 	<body>
 		<h1>iván suárez</h1>
-		<li><a href="about.html">about</a></li>
+		<nav>
+			<li><a href="about.html">about</a></li>
 		<li><a href="projects.html">projects</a></li>
+		</nav>
 	</body>
 </html>
