Added navigation bar

--- a/about.html
+++ b/about.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
+		<head>
+		<link rel="stylesheet" href="style.css"/>
+	</head>
+
         <body>
+			<nav>
+			<a class='site-title highlighter' href='index.html'>ivan suarez</a>
+			<li><a href="about.html">about</a></li>
+		<li><a href="projects.html">projects</a></li>
+		</nav>
 		<h1>about</h1>
                 <p>I'm a software developer based in Asturias, Spain. I focus in full-stack web development.</p>
                 <p>I'm interested in the upcoming decentralized web, blockchain technology and free software.</p>
