--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<h1>iván suárez</h1>
+		<h1>ivan suarez</h1>
 		<nav>
 			<li><a href="about.html">about</a></li>
 		<li><a href="projects.html">projects</a></li>
