--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
+		<head>
+		<link rel="stylesheet" href="style.css"/>
+	</head>
+
 	<body>
+			<nav>
+			<a class='site-title highlighter' href='index.html'>ivan suarez</a>
+			<li><a href="about.html">about</a></li>
+		<li><a href="projects.html">projects</a></li>
+		</nav>
 			<h1>projects</h1>
 			<a class=project-link href="default">
 			<div class="project-block">
-			<h2>etherboard</h2>
 			<div class="project-image">
 				<img src="etherboard.png"> 
 			</div>
+			<h2>etherboard</h2>
 				<p>A smart contract oriented text board
 				using the Ethereum network</p>
 			</div>
