--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 	</head>
 
 	<body>
+		<main>
 		<h1>ivan suarez</h1>
 		<nav>
 			<li><a href="about.html">about</a></li>
 		<li><a href="projects.html">projects</a></li>
 		</nav>
+		</main>
 	</body>
 </html>
