Started all over

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css"/>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Iván Suárez</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+		integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOJ+BmwXdxFgVK/Kvc=" crossorigin="anonymous">
 	</head>
 
 	<body>
-		<main>
-		<h1>ivan suarez</h1>
-		<nav>
-			<li><a href="about.html">about</a></li>
-		<li><a href="projects.html">projects</a></li>
-		</nav>
-		</main>
+		
 	</body>
 </html>
