--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 	</head>
 
 	<body>
-		
+	<header>
+		<div class="logo">
+			<img src="photo.jpg" alt="">
+		</div>
+		<button class="btn-toggle" aria-label="toggle navigation">
+			<span class="hamburger"></span>
+		</button>
+		<nav class="nav">
+			<ul class="nav__list">
+				<li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+			</ul>
+		</nav>
+	</header>
 	</body>
 </html>
