Finished my work section

--- a/index.html
+++ b/index.html
@@ -73,6 +73,23 @@
 		<img src="" alt="">
 	</section>
 
-	
+	<!--My work-->
+	<section class="my-work" id="work">
+		<h2 class="section__title">My work</h2>
+		<p class="section__subtitle"></p>
+
+		<div class="portfolio">
+			<a href="#" class="portfolio__item">
+				<img src="" alt="" class="porfolio__img">
+			</a>
+			<a href="#" class="portfolio__item">
+				<img src="" alt="" class="porfolio__img">
+			</a>
+			<a href="#" class="portfolio__item">
+				<img src="" alt="" class="porfolio__img">
+			</a>
+		</div>
+	</section>
+
 	</body>
 </html>
