--- a/index.html
+++ b/index.html
@@ -91,5 +91,13 @@
 		</div>
 	</section>
 
+	<footer>
+		<a href="mailto:ivansuarezcast@gmail.com" class="footer__link">ivansuarezcast@gmail.com</a>
+		<ul class="social-list">
+			<li class="social-list__item"><a class="social-list__link"></a></li>
+			<li class="social-list__item"><a class="social-list__link"></a></li>
+			<li class="social-list__item"><a class="social-list__link"></a></li>
+		</ul>
+	</footer>
 	</body>
 </html>
