Added some info

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
 		<h2 class="section__title section__title--services">What I Do</h2>
 		<div class="services">
 			<div class="service">
-				<h3></h3>
-			<p></p>
+				<h3>Front-end dev</h3>
+			<p>I'm experienced with React.</p>
 			</div>
 
 			<div class="service">
-				<h3></h3>
-			<p></p>
+				<h3>Back-end dev</h3>
+			<p>I'm experienced with Node.js.</p>
 			</div>
 
 			<div class="service">
-				<h3></h3>
-			<p></p>
+				<h3>DevOps</h3>
+			<p>i'm experienced with Docker.</p>
 			</div>
 			
 		</div>
@@ -65,7 +65,7 @@
 		<h2 class="section__title section__title--about">Who I am</h2>
 		<p class="section__subtitle section__subtitle--about" ></p>
 		<div class="about-me__body">
-			<p>
+			<p>I'm interested on the descentralized internet.
 			</p>
 			<p></p>
 
@@ -80,7 +80,7 @@
 
 		<div class="portfolio">
 			<a href="#" class="portfolio__item">
-				<img src="" alt="" class="porfolio__img">
+				<img src="etherboard.png" alt="" class="porfolio__img">
 			</a>
 			<a href="#" class="portfolio__item">
 				<img src="" alt="" class="porfolio__img">
