--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 		<div class="services">
 			<div class="service">
 				<h3>Front-end dev</h3>
-			<p>I'm experienced with React.</p>
+			<p>Experienced with React.</p>
 			</div>
 
 			<div class="service">
 				<h3>Back-end dev</h3>
-			<p>I'm experienced with Node.js.</p>
+			<p>Experienced in both Java (SpringBoot) and Javascript (Node.js)</p>
 			</div>
 
 			<div class="service">
-				<h3>DevOps</h3>
-			<p>i'm experienced with Docker.</p>
+				<h3>SysAdmin</h3>
+			<p>Server maintenance, deployment with Docker.</p>
 			</div>
 			
 		</div>
@@ -87,10 +87,10 @@
 				<img src="etherboard.png" alt="" class="porfolio__img">
 			</a>
 			<a href="#" class="portfolio__item">
-				<img src="" alt="" class="porfolio__img">
+				<img src="calmboard.png" alt="" class="porfolio__img">
 			</a>
 			<a href="#" class="portfolio__item">
-				<img src="" alt="" class="porfolio__img">
+				<img src="amazon.png" alt="" class="porfolio__img">
 			</a>
 		</div>
 	</section>
