Added links to projects

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 			<a href="#" class="portfolio__item">
 				<img src="etherboard.png" alt="" class="porfolio__img">
 			</a>
-			<a href="#" class="portfolio__item">
+			<a href="http://18.220.33.10:3000/" class="portfolio__item">
 				<img src="calmboard.png" alt="" class="porfolio__img">
 			</a>
-			<a href="#" class="portfolio__item">
+			<a href="https://clone-fabef.web.app/" class="portfolio__item">
 				<img src="amazon.png" alt="" class="porfolio__img">
 			</a>
 		</div>
