Finished intro section

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	</header>
 
 	<!--Introduction-->
-	<section class="home" id="home">
+	<section class="intro" id="home">
 		<h1 class="section__tile section__title--intro">
 			Hi, I am <strong>Ivan Suarez</strong>
 		</h1>
-		<p class="section__subtitle section__subtitle--intro">Full-stack dev</p>
-		<img src="photo.jpg" alt="">
+		<p class="section__subtitle section__subtitle--intro">full-stack dev</p>
+		<img src="photo.jpg" alt="" class="intro__img">
 	</section>
 
 
