Styled services section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="services">
 			<div class="service">
 				<h3>Front-end dev</h3>
-			<p>Experienced with React.</p>
+			<p>Experienced with React. Full responsive sites.</p>
 			</div>
 
 			<div class="service">
