--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 	<!--About me-->
 	<section class="about-me" id="about">
 		<h2 class="section__title section__title--about">Who I am</h2>
-		<p class="section__subtitle section__subtitle--about" ></p>
+		<p class="section__subtitle section__subtitle--about" >Developer based in Spain</p>
 		<div class="about-me__body">
 			<p>I'm interested on the descentralized internet.
 			</p>
 			<p></p>
 
 		</div>
-		<img src="" alt="">
+		<img src="" alt="" class="about-me__img">
 	</section>
 
 	<!--My work-->
@@ -98,7 +98,7 @@
 	<footer>
 		<a href="mailto:ivansuarezcast@gmail.com" class="footer__link">ivansuarezcast@gmail.com</a>
 		<ul class="social-list">
-			<li class="social-list__item"><a class="social-list__link"></a></li>
+			<li class="social-list__item"><a class="social-list__link" href="https://github.com/ivan-suarez">Github</a></li>
 			<li class="social-list__item"><a class="social-list__link"></a></li>
 			<li class="social-list__item"><a class="social-list__link"></a></li>
 		</ul>
