--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
 
 	<!--My work-->
 	<section class="my-work" id="work">
-		<h2 class="section__title">My work</h2>
-		<p class="section__subtitle"></p>
+		<h2 class="section__title section__title--work">My work</h2>
+		<p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
 		<div class="portfolio">
 			<a href="#" class="portfolio__item">
-				<img src="etherboard.png" alt="" class="porfolio__img">
+				<img src="etherboard.png" alt="" class="portfolio__img">
 			</a>
 			<a href="http://18.220.33.10:3000/" class="portfolio__item">
-				<img src="calmboard.png" alt="" class="porfolio__img">
+				<img src="calmboard.png" alt="" class="portfolio__img">
 			</a>
 			<a href="https://clone-fabef.web.app/" class="portfolio__item">
-				<img src="amazon.png" alt="" class="porfolio__img">
+				<img src="amazon.png" alt="" class="portfolio__img">
 			</a>
 		</div>
 	</section>
