--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 		<div class="logo">
 			<img src="" alt="">
 		</div>
-		<button class="btn-toggle" aria-label="toggle navigation">
+		<button class="nav-toggle" aria-label="toggle navigation">
 			<span class="hamburger"></span>
 		</button>
 		<nav class="nav">
 			<ul class="nav__list">
-				<li class="nav__item"><a href="home" class="nav__link">Home</a></li>
-				<li class="nav__item"><a href="services" class="nav__link">My Services</a></li>
-				<li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
-				<li class="nav__item"><a href="work" class="nav__link">My Work</a></li>
+				<li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+				<li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+				<li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+				<li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -103,5 +103,6 @@
 			<li class="social-list__item"><a class="social-list__link"></a></li>
 		</ul>
 	</footer>
+	<script src="index.js"></script>
 	</body>
 </html>
