Fixed projects sections

--- a/index.html
+++ b/index.html
@@ -61,17 +61,26 @@
       <div class="services">
         <div class="service">
           <h3>Front-end dev</h3>
-          <p>From the basic design with Figma to the implementation with React, I'm skilled with the tools to make a modern fully-responsibe website. </p>
+          <p>
+            From the basic design with Figma to the implementation with React,
+            I'm skilled with the tools to make a modern fully-responsibe
+            website.
+          </p>
         </div>
 
         <div class="service">
           <h3>Back-end dev</h3>
-          <p>MVC pattern projects with Node.js or Springboot. Pick your poison.</p>
+          <p>
+            MVC pattern projects with Node.js or Springboot. Pick your poison.
+          </p>
         </div>
 
         <div class="service">
           <h3>SysAdmin</h3>
-          <p>I can handle UNIX server maintenance and deployment with container, as well as some basic CI/CD with Github Actions.</p>
+          <p>
+            I can handle UNIX server maintenance and deployment with container,
+            as well as some basic CI/CD with Github Actions.
+          </p>
         </div>
       </div>
       <a href="#work" class="btn">My Work</a>
@@ -84,9 +93,13 @@
         Developer based in Spain
       </p>
       <div class="about-me__body">
-        <p>Hi, my name is Iván and I'm a software developer. Since the Internet is now an extension of the real world,
-          I see web design as an equivalent of architecture.  Because of that I value building to last, favoring decentralization and tried-and-tested technologies over
-        the latest trends.</p>
+        <p>
+          Hi, my name is Iván and I'm a software developer. Since the Internet
+          is now an extension of the real world, I see web design as an
+          equivalent of architecture. Because of that I value building to last,
+          favoring decentralization and tried-and-tested technologies over the
+          latest trends.
+        </p>
         <p></p>
       </div>
       <img src="" alt="" class="about-me__img" />
@@ -103,10 +116,10 @@
         <a href="projects/etherboard.html" class="portfolio__item">
           <img src="etherboard.png" alt="" class="portfolio__img" />
         </a>
-        <a href="http://18.220.33.10:3000/" class="portfolio__item">
+        <a href="projects/calmboard.html" class="portfolio__item">
           <img src="calmboard.png" alt="" class="portfolio__img" />
         </a>
-        <a href="https://clone-fabef.web.app/" class="portfolio__item">
+        <a href="projects/amazon-clone.html" class="portfolio__item">
           <img src="amazon.png" alt="" class="portfolio__img" />
         </a>
       </div>
