--- a/projects/amazon-clone.html
+++ b/projects/amazon-clone.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
 
   <body>
@@ -33,16 +33,16 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="index.html" class="nav__link">Home</a>
+            <a href="../index.html" class="nav__link">Home</a>
           </li>
           <li class="nav__item">
-            <a href="index.html#services" class="nav__link">My Services</a>
+            <a href="../index.html#services" class="nav__link">My Services</a>
           </li>
           <li class="nav__item">
-            <a href="index.html#about" class="nav__link">About Me</a>
+            <a href="../index.html#about" class="nav__link">About Me</a>
           </li>
           <li class="nav__item">
-            <a href="index.html#work" class="nav__link">My Work</a>
+            <a href="../index.html#work" class="nav__link">My Work</a>
           </li>
         </ul>
       </nav>
@@ -50,16 +50,24 @@
     <!--Introduction-->
     <section class="intro">
       <h1 class="section__tile section__title--intro">
-        The title <strong>of my project</strong>
+        <strong>amazon-clone</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">a short subtitle</p>
+      <p class="section__subtitle section__subtitle--intro">e-commerce site</p>
       <img src="etherboard.jpg" alt="" class="intro__img" />
     </section>
 
     <div class="portfolio__item-individual">
-      <p></p>
-      <img src="" />
-      <p></p>
+      <p>
+        This is an Amazon Clone programmed in React. It has a checkout
+        functionality and in the future it's planned to have payment processing
+        capabilities. It is deployed in Google Firebase.
+      </p>
+      <img src="../amazon-clone.png" />
+      <p>
+        You can check out the code
+        <a href="https://github.com/ivan-suarez/amazon-clone">here</a> and try
+        the live site <a href="https://clone-fabef.web.app/">here</a>
+      </p>
       <p></p>
     </div>
 
@@ -77,6 +85,6 @@
         <li class="social-list__item"><a class="social-list__link"></a></li>
       </ul>
     </footer>
-    <script src="index.js"></script>
+    <script src="../index.js"></script>
   </body>
 </html>
