--- a/projects/etherboard.html
+++ b/projects/etherboard.html
@@ -52,14 +52,22 @@
       <h1 class="section__tile section__title--intro">
         <strong>etherboard</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">blockchain operated textboard</p>
+      <p class="section__subtitle section__subtitle--intro">
+        blockchain operated textboard
+      </p>
       <img src="etherboard.jpg" alt="" class="intro__img" />
     </section>
 
     <div class="portfolio__item-individual">
-      <p>Etherboard is a textboard where the backend is running on the Ethereum blockchain, which makes it virtually censor-proof.</p>
+      <p>
+        Etherboard is a textboard where the backend is running on the Ethereum
+        blockchain, which makes it virtually censor-proof.
+      </p>
       <img src="../etherboard.png" />
-      <p></p>
+      <p>
+        You can check out the code
+        <a href="https://github.com/ivan-suarez/textboard">here</a>
+      </p>
       <p></p>
     </div>
 
