--- a/projects/amazon-clone.html
+++ b/projects/amazon-clone.html
@@ -62,7 +62,7 @@
         functionality and in the future it's planned to have payment processing
         capabilities. It is deployed in Google Firebase.
       </p>
-      <img src="../amazon-clone.png" />
+      <img src="../amazon.png" />
       <p>
         You can check out the code
         <a href="https://github.com/ivan-suarez/amazon-clone">here</a> and try
