--- a/index.html
+++ b/index.html
@@ -1,144 +1,18 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iván Suárez</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-      integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOJ+BmwXdxFgVK/Kvc="
-      crossorigin="anonymous"
-    />
-
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-
+  <header></header>
   <body>
-    <header>
-      <div class="logo">
-        <img src="" alt="" />
+
+    <div>
+      Hi, I'm Ivan. I'm a fullstack web developer.
+    </div>
+    <div id="projects">
+      <div>
+        Twitter frontend clone
       </div>
-      <button class="nav-toggle" aria-label="toggle navigation">
-        <span class="hamburger"></span>
-      </button>
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-          <li class="nav__item">
-            <a href="#services" class="nav__link">My Services</a>
-          </li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About Me</a>
-          </li>
-          <li class="nav__item">
-            <a href="#work" class="nav__link">My Work</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-    <!--Introduction-->
-    <section class="intro" id="home">
-      <h1 class="section__tile section__title--intro">
-        Hi, I am <strong>Ivan Suarez</strong>
-      </h1>
-      <p class="section__subtitle section__subtitle--intro">full-stack dev</p>
-      <img src="photo.jpg" alt="" class="intro__img" />
-    </section>
-
-    <!--My services-->
-    <section class="my-services" id="services">
-      <h2 class="section__title section__title--services">What I Do</h2>
-      <div class="services">
-        <div class="service">
-          <h3>Front-end dev</h3>
-          <p>
-            From the basic design with Figma to the implementation with React,
-            I'm skilled with the tools to make a modern fully-responsibe
-            website.
-          </p>
-        </div>
-
-        <div class="service">
-          <h3>Back-end dev</h3>
-          <p>
-            MVC pattern projects with Node.js or Springboot. Pick your poison.
-          </p>
-        </div>
-
-        <div class="service">
-          <h3>SysAdmin</h3>
-          <p>
-            I can handle UNIX server maintenance and deployment with container,
-            as well as some basic CI/CD with Github Actions.
-          </p>
-        </div>
+      <div>
+        Spotify playlist exporter
       </div>
-      <a href="#work" class="btn">My Work</a>
-    </section>
-
-    <!--About me-->
-    <section class="about-me" id="about">
-      <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about">
-        Developer based in Spain
-      </p>
-      <div class="about-me__body">
-        <p>
-          Hi, my name is Iván and I'm a software developer. Since the Internet
-          is now an extension of the real world, I see web design as an
-          equivalent of architecture. Because of that I value building to last,
-          favoring decentralization and tried-and-tested technologies over the
-          latest trends.
-        </p>
-        <p></p>
-      </div>
-      <img src="" alt="" class="about-me__img" />
-    </section>
-
-    <!--My work-->
-    <section class="my-work" id="work">
-      <h2 class="section__title section__title--work">My work</h2>
-      <p class="section__subtitle section__subtitle--work">
-        A selection of my range of work
-      </p>
-
-      <div class="portfolio">
-        <a href="projects/etherboard.html" class="portfolio__item">
-          <img src="etherboard.png" alt="" class="portfolio__img" />
-        </a>
-        <a href="projects/calmboard.html" class="portfolio__item">
-          <img src="calmboard.png" alt="" class="portfolio__img" />
-        </a>
-        <a href="projects/amazon-clone.html" class="portfolio__item">
-          <img src="amazon.png" alt="" class="portfolio__img" />
-        </a>
-      </div>
-    </section>
-
-    <footer>
-      <a href="mailto:ivansuarezcast@gmail.com" class="footer__link"
-        >ivansuarezcast@gmail.com</a
-      >
-      <ul class="social-list">
-        <li class="social-list__item">
-          <a class="social-list__link" href="https://github.com/ivan-suarez"
-            >Github</a
-          >
-        </li>
-        <li class="social-list__item"><a class="social-list__link"></a></li>
-        <li class="social-list__item"><a class="social-list__link"></a></li>
-      </ul>
-    </footer>
-    <script src="index.js"></script>
+    </div>
   </body>
+  <footer></footer>
 </html>
