Add some text to spotify project

--- a/projects/spotifyexporter.html
+++ b/projects/spotifyexporter.html
@@ -1,7 +1,15 @@
 <html>
-    <body>
-        <p>
-            
-        </p>
-    </body>
+
+<body>
+        I created this project with the objective of trying out Next.js. Previously when I tried out the Twitter API
+        using Vue I had CORS issues so I had to make a Node.js backend as an intermediary, so using a fullstack
+        framework like Next.js seemed like a good idea.
+        First thing I created a quick wireframe of the application in Figma. I only need two screens: one for login with
+        spotify and the other one for displaying the playlists. On top of that I decide to add a modal to show the
+        playlists tracks because who doesn't love modals?
+        So I proceed to implement the OAuth flow. I realized I installed typescript, which I didn't even use fully since
+        the spotify API library didn't support the language yet.
+        For styling I choose Tailwind CSS, which I found a bit lackluster.
+</body>
+
 </html>
