Add images and descriptions to projects

--- a/projects/spotifyexporter.html
+++ b/projects/spotifyexporter.html
@@ -1,6 +1,9 @@
 <html>
 
 <body>
+        <img src="spotify-screenshot-login.png">
+        <img src="spotify-screenshot-playlist.png">
+        <img src="spotify-screenshot-modal.png">
         I created this project with the objective of trying out Next.js. Previously when I tried out the Twitter API
         using Vue I had CORS issues so I had to make a Node.js backend as an intermediary, so using a fullstack
         framework like Next.js seemed like a good idea.
