Add images and center layout

--- a/index.html
+++ b/index.html
@@ -13,30 +13,38 @@
     </div>
 
   </header>
-  <div id="holy-grail-body" class="flex flex-1">
+  <div id="holy-grail-body" class="flex flex-1 justify-center">
     <nav style="flex: 0 0 12em"></nav>
     <main>
-      <div id="projects">
+      <h2 class="text-3xl font-bold">Projects</h2>
+      <div id="projects" class="flex justify-evenly">
         <div>
-          <a href="projects/twitterclone.html">Twitter frontend clone</a>
+          <a href="projects/twitterclone.html">
+            <img src="twitter-logo.png" class="h-48 w-48">Twitter frontend clone</a>
         </div>
         <div>
-          <a href="projects/spotifyexporter.html">Spotify playlist exporter</a>
+          <a href="projects/spotifyexporter.html">
+            <img src="spotify-logo.png" class="h-48 w-48">Spotify playlist exporter</a>
         </div>
       </div>
       <div id="about">
-        Hi, I'm Ivan. I'm a fullstack web developer residing in Oviedo, Spain.
+        <h2 class="text-3xl font-bold">About me</h2>
+        <p>
+          Hi, I'm Ivan. I'm a fullstack web developer residing in Oviedo, Spain.
+        </p>
+        
       </div>
-      <div id="curriculum">
+      <h2 class="text-3xl font-bold">CV</h2>
+      <div id="curriculum" class="flex">
         <div>
-          Experience
+          <div class="font-bold">Experience</div>
           <ul>
             <li>February 2023 - Present - Business Insights</li>
             <li>October 2021 - February 2023 - Capgemini</li>
           </ul>
         </div>
         <div>
-          Education
+          <div class="font-bold">Education</div>
           <ul>
             <li>2023 - Google Cloud Certified Professional Cloud Architect</li>
             <li>2014-2020 - Bachelor Degree in Software Engineering (not finished)</li>
@@ -44,7 +52,7 @@
           </ul>
         </div>
         <div>
-          Skills
+          <div class="font-bold">Skills</div>
           <ul>
             <li>Backend: Java, Springboot, JPA, Node.js, SQL, JUnit</li>
             <li>Frontend: HTML, CSS, Javascript, Vue.js, React, TailwindCSS, Cypress.io</li>
