--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body class="flex flex-col min-h-screen">
   <header class="flex justify-between">
-    <h1 class="text-5xl font-bold">Iván Suárez Castiñeiras</h1>
+    <h1 class="text-5xl font-bold p-4">Iván Suárez Castiñeiras</h1>
     <div class="">
       <a href="#projects">Projects</a>
       <a href="#about">About</a>
@@ -16,49 +16,55 @@
   <div id="holy-grail-body" class="flex flex-1 justify-center">
     <nav style="flex: 0 0 12em"></nav>
     <main>
-      <h2 class="text-3xl font-bold">Projects</h2>
-      <div id="projects" class="flex justify-evenly">
-        <div>
-          <a href="projects/twitterclone.html">
-            <img src="twitter-logo.png" class="h-48 w-48">Twitter frontend clone</a>
-        </div>
-        <div>
-          <a href="projects/spotifyexporter.html">
-            <img src="spotify-logo.png" class="h-48 w-48">Spotify playlist exporter</a>
+
+      <div id="projects" class="py-10">
+        <h2 class="text-3xl font-bold py-10">Projects</h2>
+        <div class="flex justify-evenly">
+          <div>
+            <a href="projects/twitterclone.html">
+              <img src="twitter-logo.png" class="h-48 w-48">Twitter frontend clone</a>
+          </div>
+          <div>
+            <a href="projects/spotifyexporter.html">
+              <img src="spotify-logo.png" class="h-48 w-48">Spotify playlist exporter</a>
+          </div>
         </div>
       </div>
-      <div id="about">
+      <div id="about" class="py-10">
         <h2 class="text-3xl font-bold">About me</h2>
         <p>
           Hi, I'm Ivan. I'm a fullstack web developer residing in Oviedo, Spain.
         </p>
-        
+
       </div>
-      <h2 class="text-3xl font-bold">CV</h2>
-      <div id="curriculum" class="flex">
-        <div>
-          <div class="font-bold">Experience</div>
-          <ul>
-            <li>February 2023 - Present - Business Insights</li>
-            <li>October 2021 - February 2023 - Capgemini</li>
-          </ul>
-        </div>
-        <div>
-          <div class="font-bold">Education</div>
-          <ul>
-            <li>2023 - Google Cloud Certified Professional Cloud Architect</li>
-            <li>2014-2020 - Bachelor Degree in Software Engineering (not finished)</li>
-            <li>2012-2014 - Advanced Technician in Multi-platform Application Development</li>
-          </ul>
-        </div>
-        <div>
-          <div class="font-bold">Skills</div>
-          <ul>
-            <li>Backend: Java, Springboot, JPA, Node.js, SQL, JUnit</li>
-            <li>Frontend: HTML, CSS, Javascript, Vue.js, React, TailwindCSS, Cypress.io</li>
-            <li>Devops: Linux, Google Cloud, Docker, Kubernetes, Github Actions</li>
-            <li>Other: Figma</li>
-          </ul>
+
+      <div id="curriculum" class="py-10">
+        <h2 class="text-3xl font-bold py-6">CV</h2>
+        <div class="flex">
+          <div>
+            <div class="font-bold">Experience</div>
+            <ul>
+              <li>February 2023 - Present - Business Insights</li>
+              <li>October 2021 - February 2023 - Capgemini</li>
+            </ul>
+          </div>
+          <div>
+            <div class="font-bold">Education</div>
+            <ul>
+              <li>2023 - Google Cloud Certified Professional Cloud Architect</li>
+              <li>2014-2020 - Bachelor Degree in Software Engineering (not finished)</li>
+              <li>2012-2014 - Advanced Technician in Multi-platform Application Development</li>
+            </ul>
+          </div>
+          <div>
+            <div class="font-bold">Skills</div>
+            <ul>
+              <li>Backend: Java, Springboot, JPA, Node.js, SQL, JUnit</li>
+              <li>Frontend: HTML, CSS, Javascript, Vue.js, React, TailwindCSS, Cypress.io</li>
+              <li>Devops: Linux, Google Cloud, Docker, Kubernetes, Github Actions</li>
+              <li>Other: Figma</li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
