Add links in spotify project

--- a/projects/spotifyexporter.html
+++ b/projects/spotifyexporter.html
@@ -17,7 +17,8 @@
           <button onClick="moveToPreviousImage()">Prev</button>
           <button onClick="moveToNextImage()">Next</button>
         </div>
-
+        <p>You can try the live app <a href="https://spotify-playlist-export.vercel.app/" class="text-blue-500 underline hover:text-blue-800"">here</a> and browse 
+          the code <a href="https://github.com/ivan-suarez/spotify-playlist-export" class="text-blue-500 underline hover:text-blue-800">here.</a></p>
         <p class="p-10">
           I created this project with the objective of trying out Next.js. Previously when I tried out the
           Twitter API
