Add work experience

--- a/index.html
+++ b/index.html
@@ -17,8 +17,22 @@
     <nav style="flex: 0 0 12em"></nav>
     <main>
 
+      <div id="work" class="py-10">
+        <h2 class="text-3xl font-bold py-10">Work</h2>
+        <div class="flex justify-evenly">
+          <div>
+            <a href="projects/axa.html">
+              <img src="axa-logo.png" class="h-48 w-48">Axa</a>
+          </div>
+          <div>
+            <a href="projects/carrefour.html">
+              <img src="carrefour-logo.png" class="h-48 w-48">Carrefour</a>
+          </div>
+        </div>
+      </div>
+
       <div id="projects" class="py-10">
-        <h2 class="text-3xl font-bold py-10">Projects</h2>
+        <h2 class="text-3xl font-bold py-10">Personal projects</h2>
         <div class="flex justify-evenly">
           <div>
             <a href="projects/spotifyexporter.html">
@@ -26,6 +40,7 @@
           </div>
         </div>
       </div>
+
       <div id="about" class="py-10">
         <h2 class="text-3xl font-bold">About me</h2>
         <p>
