--- a/index.html
+++ b/index.html
@@ -2,22 +2,39 @@
 
 <head>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+            behavior: 'smooth'
+        });
+    });
+});
+  </script>
 </head>
 
 <body class="flex flex-col min-h-screen">
-  <header class="flex justify-between">
-    <h1 class="text-5xl font-bold p-4">Iván Suárez Castiñeiras</h1>
+  <header class="flex justify-between fixed top-0 w-full z-10">
+    <h1 class="text-5xl font-bold p-4">Iván Suárez</h1>
     <div class="">
+      <a href="#home">Home</a>
+      <a href="#work">Work</a>
       <a href="#projects">Projects</a>
       <a href="#about">About</a>
     </div>
 
   </header>
-  <div id="holy-grail-body" class="flex flex-1 justify-center">
+  <div id="holy-grail-body" class="flex flex-1 justify-center pt-32">
     <nav style="flex: 0 0 12em"></nav>
     <main>
-
-      <div id="work" class="py-10">
+      <div id="home" class="min-h-screen">
+        <div class="text-5xl">Iván Suárez Castiñeiras</div>
+        
+        <div>Full Stack Developer</div>
+      </div>
+      <div id="work" class="py-10 min-h-screen">
         <h2 class="text-3xl font-bold py-10">Work</h2>
         <div class="flex justify-evenly">
           <div>
@@ -31,7 +48,7 @@
         </div>
       </div>
 
-      <div id="projects" class="py-10">
+      <div id="projects" class="py-10 min-h-screen">
         <h2 class="text-3xl font-bold py-10">Personal projects</h2>
         <div class="flex justify-evenly">
           <div>
@@ -41,43 +58,43 @@
         </div>
       </div>
 
-      <div id="about" class="py-10">
+      <div id="about" class="py-10 min-h-screen">
         <h2 class="text-3xl font-bold">About me</h2>
         <p>
           Hi, I'm Ivan. I'm a fullstack web developer residing in Oviedo, Spain.
         </p>
-
-      </div>
-
-      <div id="curriculum" class="py-10">
-        <h2 class="text-3xl font-bold py-6">CV</h2>
-        <div class="flex">
-          <div>
-            <div class="font-bold">Experience</div>
-            <ul>
-              <li>February 2023 - Present - Business Insights</li>
-              <li>October 2021 - February 2023 - Capgemini</li>
-            </ul>
-          </div>
-          <div>
-            <div class="font-bold">Education</div>
-            <ul>
-              <li>2023 - Google Cloud Certified Professional Cloud Architect</li>
-              <li>2014-2020 - Bachelor Degree in Software Engineering (not finished)</li>
-              <li>2012-2014 - Advanced Technician in Multi-platform Application Development</li>
-            </ul>
-          </div>
-          <div>
-            <div class="font-bold">Skills</div>
-            <ul>
-              <li>Backend: Java, Springboot, JPA, Node.js, SQL, JUnit</li>
-              <li>Frontend: HTML, CSS, Javascript, Vue.js, React, TailwindCSS, Cypress.io</li>
-              <li>Devops: Linux, Google Cloud, Docker, Kubernetes, Github Actions</li>
-              <li>Other: Figma</li>
-            </ul>
+        <div id="curriculum" class="py-10">
+          <h2 class="text-3xl font-bold py-6">CV</h2>
+          <div class="flex">
+            <div>
+              <div class="font-bold">Experience</div>
+              <ul>
+                <li>February 2023 - Present - Business Insights</li>
+                <li>October 2021 - February 2023 - Capgemini</li>
+              </ul>
+            </div>
+            <div>
+              <div class="font-bold">Education</div>
+              <ul>
+                <li>2023 - Google Cloud Certified Professional Cloud Architect</li>
+                <li>2014-2020 - Bachelor Degree in Software Engineering (not finished)</li>
+                <li>2012-2014 - Advanced Technician in Multi-platform Application Development</li>
+              </ul>
+            </div>
+            <div>
+              <div class="font-bold">Skills</div>
+              <ul>
+                <li>Backend: Java, Springboot, JPA, Node.js, SQL, JUnit</li>
+                <li>Frontend: HTML, CSS, Javascript, Vue.js, React, TailwindCSS, Cypress.io</li>
+                <li>Devops: Linux, Google Cloud, Docker, Kubernetes, Github Actions</li>
+                <li>Other: Figma</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
+
+      
     </main>
 
     <aside style="flex: 0 0 12em"></aside>
