--- a/index.html
+++ b/index.html
@@ -18,32 +18,33 @@
 <body class="flex flex-col min-h-screen">
   <header class="flex justify-between fixed top-0 w-full z-10">
     <h1 class="text-5xl font-bold p-4">Iván Suárez</h1>
-    <div class="">
-      <a href="#home">Home</a>
-      <a href="#work">Work</a>
-      <a href="#projects">Projects</a>
-      <a href="#about">About</a>
+    <div class="py-2">
+      <a href="#home" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Home</a>
+      <a href="#work" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Work</a>
+      <a href="#projects" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Projects</a>
+      <a href="#about" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">About</a>
     </div>
 
   </header>
   <div id="holy-grail-body" class="flex flex-1 justify-center pt-32">
     <nav style="flex: 0 0 12em"></nav>
     <main>
-      <div id="home" class="min-h-screen">
-        <div class="text-5xl">Iván Suárez Castiñeiras</div>
+      <div id="home" class="min-h-screen flex flex-col justify-center">
         
-        <div>Full Stack Developer</div>
+        <div class="text-9xl py-2">Iván Suárez Castiñeiras</div>
+        <div class="text-5xl py-2">Hey there! I’m full stack web developer based in rainy Asturias, Spain. </div>
+        <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-4 px-4 border border-blue-500 hover:border-transparent rounded">See my work</button>
       </div>
       <div id="work" class="py-10 min-h-screen">
         <h2 class="text-3xl font-bold py-10">Work</h2>
         <div class="flex justify-evenly">
           <div>
             <a href="projects/axa.html">
-              <img src="axa-logo.png" class="h-48 w-48">Axa</a>
+              <img src="axa-logo.png" class="h-64 w-64"></a>
           </div>
           <div>
             <a href="projects/carrefour.html">
-              <img src="carrefour-logo.png" class="h-48 w-48">Carrefour</a>
+              <img src="carrefour-logo.png" class="h-64 w-64"></a>
           </div>
         </div>
       </div>
@@ -53,7 +54,7 @@
         <div class="flex justify-evenly">
           <div>
             <a href="projects/spotifyexporter.html">
-              <img src="spotify-logo.png" class="h-48 w-48">Spotify playlist exporter</a>
+              <img src="spotify-logo.png" class="h-64 w-64"></a>
           </div>
         </div>
       </div>
