--- a/projects/spotifyexporter.html
+++ b/projects/spotifyexporter.html
@@ -6,7 +6,7 @@
 
 <body class="flex flex-col min-h-screen">
   <header class="flex justify-between">
-    <h1 class="text-5xl font-bold p-4">Iván Suárez Castiñeiras</h1>
+    <h1 class="text-5xl font-bold p-4">Iván Suárez</h1>
   </header>
   <div class="flex flex-1 justify-center p-10">
     <nav></nav>
