--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     });
 });
   </script>
+  <style>
+    .hide-scrollbar::-webkit-scrollbar {
+      display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+    }
+  
+    .hide-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  </style>
 </head>
 
 <body class="flex flex-col min-h-screen">
@@ -28,14 +38,14 @@
   </header>
   <div id="holy-grail-body" class="flex flex-1 justify-center pt-32">
     <nav style="flex: 0 0 12em"></nav>
-    <main>
-      <div id="home" class="min-h-screen flex flex-col justify-center">
+    <main class="snap-y snap-mandatory h-screen overflow-scroll overflow-hidden hide-scrollbar">
+      <div id="home" class="min-h-screen flex flex-col justify-center snap-start">
         
         <div class="text-9xl py-2">Iván Suárez Castiñeiras</div>
         <div class="text-5xl py-2">Hey there! I’m a full stack web developer based in rainy Asturias, Spain. </div>
         <a href="#work" class="text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-4 px-4 border border-blue-500 hover:border-transparent rounded">See my work</a>
       </div>
-      <div id="work" class="py-10 min-h-screen">
+      <div id="work" class="py-10 min-h-screen snap-start">
         <h2 class="text-3xl font-bold py-10">Work</h2>
         <div class="flex justify-evenly py-10">
           <div>
@@ -49,7 +59,7 @@
         </div>
       </div>
 
-      <div id="projects" class="py-10 min-h-screen">
+      <div id="projects" class="py-10 min-h-screen snap-start">
         <h2 class="text-3xl font-bold py-10">Personal projects</h2>
         <div class="flex justify-evenly py-10">
           <div>
@@ -59,7 +69,7 @@
         </div>
       </div>
 
-      <div id="about" class="py-10 min-h-screen">
+      <div id="about" class="py-10 min-h-screen snap-start">
         <h2 class="text-3xl font-bold">About me</h2>
         <div class="py-10">
           <p>
