--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class="flex flex-col min-h-screen">
-  <header class="flex justify-between fixed top-0 w-full z-10">
+  <header class="flex flex-col md:flex-row fixed top-0 w-full z-10 items-center justify-between">
     <h1 class="text-5xl font-bold p-4">Iván Suárez</h1>
     <div class="py-2 px-4">
       <a href="#home" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Home</a>
@@ -45,9 +45,9 @@
         <div class="text-5xl py-2">Hey there! I’m a full stack web developer based in rainy Asturias, Spain. </div>
         <a href="#work" class="text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-4 px-4 border border-blue-500 hover:border-transparent rounded">See my work</a>
       </div>
-      <div id="work" class="py-10 min-h-screen snap-start">
+      <div id="work" class="min-h-screen snap-start" style="padding-top: 100px;">
         <h2 class="text-3xl font-bold py-10">Work</h2>
-        <div class="flex justify-evenly py-10">
+        <div class="flex justify-evenly py-10 flex-col md:flex-row">
           <div>
             <a href="projects/axa.html">
               <img src="axa-logo.png" class="h-64 w-64"></a>
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <div id="projects" class="py-10 min-h-screen snap-start">
+      <div id="projects" class="py-10 min-h-screen snap-start" style="padding-top: 100px;">
         <h2 class="text-3xl font-bold py-10">Personal projects</h2>
         <div class="flex justify-evenly py-10">
           <div>
@@ -69,7 +69,7 @@
         </div>
       </div>
 
-      <div id="about" class="py-10 min-h-screen snap-start">
+      <div id="about" class="py-10 min-h-screen snap-start" style="padding-top: 150px;">
         <h2 class="text-3xl font-bold">About me</h2>
         <div class="py-10">
           <p>
