--- a/index.html
+++ b/index.html
@@ -71,10 +71,14 @@
 
       <div id="about" class="py-10 min-h-screen snap-start" style="padding-top: 150px;">
         <h2 class="text-3xl font-bold">About me</h2>
-        <div class="py-10">
+        <div class="flex flex-col md:flex-row justify-evenly py-10">
+          <img src="portrait.jpg" class="w-64"></a>
           <p>
-            Hi, I'm Ivan. I'm a fullstack web developer residing in Oviedo, Spain.
+            Hi, I'm Ivan. I'm a fullstack web developer residing in Oviedo, Spain. While I started as a backend engineer, I wanted to learn know more about the whole product development process, 
+            that's why I've been getting into different fields over the years: devops, cloud, frontend, UX design... While it's impossible to be proficient in everything, knowing the basics has given me a more holistic view in my job, and make able 
+            to emphatize better with the rest of the team.
           </p>
+          
         </div>
         
         <div id="curriculum" class="py-10">
