--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
   <div id="holy-grail-body" class="flex flex-1 justify-center pt-32">
     <nav style="flex: 0 0 12em"></nav>
     <main class="snap-y snap-mandatory h-screen overflow-scroll overflow-hidden hide-scrollbar">
-      <div id="home" class="min-h-screen flex flex-col justify-center snap-start">
-        
-        <div class="text-9xl py-2">Iván Suárez Castiñeiras</div>
-        <div class="text-5xl py-2">Hey there! I’m a full stack web developer based in rainy Asturias, Spain. </div>
+      <div id="home" class="min-h-screen flex flex-col justify-center snap-start ">
+        <div id="hero" class="flex flex-col justify-center bg-gradient-to-r from-blue-500 to-teal-500 min-h-128" style="min-height: 50vh;border-radius: 20px;">
+          <div class="text-9xl py-2 text-white">Iván Suárez Castiñeiras</div>
+        <div class="text-5xl py-2 text-white">Hey there! I’m a full stack web developer based in rainy Asturias, Spain. </div>
         <a href="#work" class="text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-4 px-4 border border-blue-500 hover:border-transparent rounded">See my work</a>
+        </div>
+        
       </div>
       <div id="work" class="min-h-screen snap-start" style="padding-top: 100px;">
         <h2 class="text-3xl font-bold py-10">Work</h2>
