Add new content

--- a/index.html
+++ b/index.html
@@ -1,3 +1,38 @@
-<html>
-  <body></body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Personal Website</title>
+</head>
+
+<body>
+  <header>
+    <h1>Welcome to My Personal Website</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Home</h2>
+      <p>Technology does not just improve lives, it fundamentally reshapes them and sometimes not in a way we desire.
+        The internet can be a virtual steppe of unlimited knowledge or an algorithm-driven perpetual scrolling prison.
+        Facing this we have the choice to build tools to empower us as individuals and as a community, instead of
+        trapping ourselves in an endless cycle of consumption and status seeking. </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 My Personal Website. All rights reserved.</p>
+  </footer>
+</body>
+
 </html>
