--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <p>Technology does not just improve lives, it fundamentally reshapes them and sometimes not in a way we desire.
         The internet can be a virtual steppe of unlimited knowledge or an algorithm-driven perpetual scrolling prison.
         Facing this we have the choice to build tools to empower us as individuals and as a community, instead of
-        trapping ourselves in an endless cycle of consumption and status seeking. </p>
+        trapping ourselves in an endless cycle of consumption and status seeking. We do not live in a deterministic world, but we are in front of 
+      multiple paths that we can choose to follow. In this website, I'm trying to envision the door that I want to open. </p>
     </section>
   </main>
 
