Add song in midigen

--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,11 @@
             <p>But now I had a different problem, the notes were converging to the same pitch. I switched to one-hot encoding features, but the problem persisted. This brought me a lot of frustration, until I eventually abandoned
                 the project. After AI-assisted coding tools became better, I decided to give it another try. I switched to a multiple-head attention model, which gave me better results, but not much.
             </p>
+            <p>Here's a sample of the generated music:</p>
+            <audio controls>
+                <source src="https://github.com/ivan-suarez/midigen/raw/refs/heads/master/generated_sequence.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
             <p><strong>Technologies:</strong> Python, Tensorflow, Keras</p>
             <p><a href="#">View Project</a> | <a href="#">GitHub Repository</a></p>
         </section>
