--- a/index.html
+++ b/index.html
@@ -9,32 +9,34 @@
 </head>
 
 <body>
-  <header>
-    <h1>Welcome to My Personal Website</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="blog.html">Blog</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="site-container">
+    <header>
+      <h1>Welcome to My Personal Website</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <main>
-    <section>
-      <h2>Home</h2>
-      <p>Technology does not just improve lives, it fundamentally reshapes them and sometimes not in a way we desire.
-        The internet can be a virtual steppe of unlimited knowledge or an algorithm-driven perpetual scrolling prison.
-        Facing this we have the choice to build tools to empower us as individuals and as a community, instead of
-        trapping ourselves in an endless cycle of consumption and status seeking. We do not live in a deterministic world, but we are in front of 
-      multiple paths that we can choose to follow. In this website, I'm trying to envision the door that I want to open. </p>
-    </section>
-  </main>
+    <main>
+      <section>
+        <h2>Home</h2>
+        <p>Technology does not just improve lives, it fundamentally reshapes them and sometimes not in a way we desire.
+          The internet can be a virtual steppe of unlimited knowledge or an algorithm-driven perpetual scrolling prison.
+          Facing this we have the choice to build tools to empower us as individuals and as a community, instead of
+          trapping ourselves in an endless cycle of consumption and status seeking. We do not live in a deterministic world, but we are in front of 
+        multiple paths that we can choose to follow. In this website, I'm trying to envision the door that I want to open. </p>
+      </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2023 My Personal Website. All rights reserved.</p>
-  </footer>
+    <footer>
+      <p>&copy; 2023 My Personal Website. All rights reserved.</p>
+    </footer>
+  </div>
 </body>
 
 </html>
